--- a/logica-js-projeto_inicial/index.html
+++ b/logica-js-projeto_inicial/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <!-- <script src="app.js" defer></script> -->
-    <script src="desafio.js"></script>
+    <script src="app.js" defer></script>
+    <!-- <script src="desafio.js"></script> -->
   </body>
 </html>
