--- a/logica-js-projeto_inicial/index.html
+++ b/logica-js-projeto_inicial/index.html
@@ -31,6 +31,6 @@
       </div>
     </div>
     <script src="app.js" defer></script>
-    <!-- <script src="desafio.js"></script> -->
+    <!-- <script src="desafios2.js"></script> -->
   </body>
 </html>
